Update the word 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   authDomain: "horseracing-662ec.firebaseapp.com",
   databaseURL: "https://horseracing-662ec-default-rtdb.firebaseio.com",
   projectId: "horseracing-662ec",
-  storageBucket: "horseracing-662ec.appspot.com",
+  storageBucket: "horseracing-662ec.firebasestorage.app",
   messagingSenderId: "602340236424",
   appId: "1:602340236424:web:2fb1ca46c73df48712933d"
 };
@@ -606,3 +606,4 @@
   </script>
 </body>
 </html>
+
